// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityTable DOM should render correctly 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Remove from inventory"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Split
    hasGutter={true}
  >
    <SplitItem>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Stack
        hasGutter={true}
      >
        <StackItem>
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </StackItem>
        <StackItem>
          To disable the daily upload for this 
          system
          , use the following command:
        </StackItem>
        <StackItem>
          <ClipboardCopy
            additionalActions={null}
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </StackItem>
      </Stack>
    </SplitItem>
  </Split>
  <Level
    hasGutter={true}
  >
    <LevelItem>
      <Button
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Button>
      <Button
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Button>
    </LevelItem>
  </Level>
</Modal>
`;

exports[`EntityTable DOM should render correctly with multiple systems - count 1 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Remove from inventory"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Split
    hasGutter={true}
  >
    <SplitItem>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Stack
        hasGutter={true}
      >
        <StackItem>
          something
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </StackItem>
        <StackItem>
          To disable the daily upload for this 
          system
          , use the following command:
        </StackItem>
        <StackItem>
          <ClipboardCopy
            additionalActions={null}
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </StackItem>
      </Stack>
    </SplitItem>
  </Split>
  <Level
    hasGutter={true}
  >
    <LevelItem>
      <Button
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Button>
      <Button
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Button>
    </LevelItem>
  </Level>
</Modal>
`;

exports[`EntityTable DOM should render correctly with multiple systems - count 2 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Remove from inventory"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Split
    hasGutter={true}
  >
    <SplitItem>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Stack
        hasGutter={true}
      >
        <StackItem>
          2 systems
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          systems
           to add it back to your inventory.
        </StackItem>
        <StackItem>
          To disable the daily upload for this 
          systems
          , use the following command:
        </StackItem>
        <StackItem>
          <ClipboardCopy
            additionalActions={null}
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </StackItem>
      </Stack>
    </SplitItem>
  </Split>
  <Level
    hasGutter={true}
  >
    <LevelItem>
      <Button
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Button>
      <Button
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Button>
    </LevelItem>
  </Level>
</Modal>
`;

exports[`EntityTable DOM should render correctly with one system 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Remove from inventory"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Split
    hasGutter={true}
  >
    <SplitItem>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Stack
        hasGutter={true}
      >
        <StackItem>
          something
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </StackItem>
        <StackItem>
          To disable the daily upload for this 
          system
          , use the following command:
        </StackItem>
        <StackItem>
          <ClipboardCopy
            additionalActions={null}
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </StackItem>
      </Stack>
    </SplitItem>
  </Split>
  <Level
    hasGutter={true}
  >
    <LevelItem>
      <Button
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Button>
      <Button
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Button>
    </LevelItem>
  </Level>
</Modal>
`;

exports[`EntityTable DOM should render correctly with one system 2`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Remove from inventory"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Split
    hasGutter={true}
  >
    <SplitItem>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <Stack
        hasGutter={true}
      >
        <StackItem>
          something
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </StackItem>
        <StackItem>
          To disable the daily upload for this 
          system
          , use the following command:
        </StackItem>
        <StackItem>
          <ClipboardCopy
            additionalActions={null}
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </StackItem>
      </Stack>
    </SplitItem>
  </Split>
  <Level
    hasGutter={true}
  >
    <LevelItem>
      <Button
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Button>
      <Button
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Button>
    </LevelItem>
  </Level>
</Modal>
`;
